Fix newInstance is deprecated on JDK 11.